added support for Condition resource
